style.css
/* ... */
.add-padding{
    padding: 20px;
}
#desc {
    width: 250px;
    overflow: auto;
    border-radius: 10px;    
}
#head {
    width: 250px;
    border-radius: 6px;
}
.btn {
    margin-left: 20px;
    background-color: black;
    border: 1px solid black;
    color: white;
    width: 50px;
    border-radius: 10px;
    height: 20px;
}

.text-div {
    position:relative;
}

.spanspan {
    position:absolute;
    bottom: 60px;
    right: 55px;
}

.inner-wrap {
    display:flex;
    width: 75%;
    margin: auto;
    border: 2px solid rgba(29,189,39,1);
    border-top-right-radius: 20px;
    border-top-left-radius: 20px;
    border-bottom: none;


}

.chat-nav {
    flex:2;
    padding:12px 22px;
    overflow-y: auto;
    padding-right: 30px;
    height: 40vh;
    color: rgba(29,189,39,1);
}

.chat-box {
    padding:10px 15px;
    flex:5;
    margin-left: 20px;
    border-left: 2px solid rgba(29,189,39,1);
    overflow-y: auto;
    height: 40vh;
    color: rgba(29,189,39,1);

}

.pers-chat {
    line-height:23px;
}

.bottom-wrap {
    display:flex;
    width: 75%;
    margin: auto;
    border: 2px solid rgba(29,189,39,1);
    border-bottom-right-radius: 20px;
    border-bottom-left-radius: 20px;
}

.opts {
    flex:2;
    padding:12px 22px;
    overflow-y: auto;
    padding-right: 30px;
    height: 10vh;
    color: rgba(29,189,39,1);
    position: relative;
}

.type-box{
    overflow-y: auto;
    overflow: hidden;
    border:none;
    height: 10vh;
    outline: none;
    resize: none;
    background-color: rgb(39, 39, 39);
    display: block;
    width: 90%;
    color: rgba(29,189,39,1);
    cursor: pointer;



}

.type-box-cont{
    flex:5;
    padding:10px 15px;
    margin-left: 20px;
    border-left: 2px solid rgba(29,189,39,1);
    position: relative;
    color: rgba(29,189,39,1);
}

#plane {
    position:absolute;
    top: 15px;
    right: 15px;
    color: rgba(29,189,39,1);
    cursor: pointer;
}

#plus {
    position:absolute;
    top: 15px;
    right: 5px;
    color: rgba(29,189,39,1);
    cursor: pointer;
}

#cogs {
    position:absolute;
    top: 15px;
    left: 15px;
    color: rgba(29,189,39,1);
    cursor: pointer;
}

.pers-chat:hover{
    background-color: rgb(49, 49, 49);
    cursor: pointer;
}

/* Sign out */

.loader {
    border: 16px solid #f3f3f3;
    border-radius: 50%;
    border-top: 16px solid #3498db;
    width: 60px;
    height: 60px    ;
    -webkit-animation: spin 2s linear infinite; /* Safari */
    animation: spin 2s linear infinite;
  }
  
  /* Safari */
  @-webkit-keyframes spin {
    0% { -webkit-transform: rotate(0deg); }
    100% { -webkit-transform: rotate(360deg); }
  }
  
  @keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
  }

  .loader-container{
      height: 300px;
      width: 300px;
    display:flex;
    flex-direction: column;
    border:solid white;
      
  }
  .loader-container p{
      text-align: center;
      color: white;
      margin-bottom: 30px;
  }

  .loader{
      align-self: center;
    
  }

  .loader-wrapper{
      display:flex;
      justify-content: center;
      align-items: center;
      width: 100%; 
      height: 800px;
     }


#bankid-body{
    background-color: none !important;
}

#bankid-img {    
    padding-top: 5%;
    display: block;
    margin: auto;
    margin-bottom: 4%;
    max-width: 100%;
}

#qr-code-img{
    max-width: 50px;
    display: block;
    margin: auto;
}

#qr-code {
color: rgb(0, 110, 129);
}
.bank-id {
    text-align: center;

}

.bank-id-p {
    text-align: center;
    margin-bottom: 5%;
}

